syntax = "proto3";

package gg.airplane.flare.proto;

option java_package = "gg.airplane.flare.proto";
option java_outer_classname = "ProfilerFileProto";

enum ProfileType {
  ITIMER = 0;
  CPU = 1;
  ALLOC = 2;
  LOCK = 3;
  WALL = 4;
}

message CreateProfile {
  Format format = 1;
  Version version = 2; // replaced by v3.versions
  repeated ConfigurationFile configs = 3;
  HardwareInfo hwinfo = 4;
  VMOptions vmoptions = 5;
  OperatingSystem os = 6;
  V3 v3 = 7;

  enum Format {
    ONE_ZERO = 0; // 1.0
    TWO_ZERO = 1; // 2.0
    THREE_ZERO = 2; // 3.0
  }

  message V3 {
    map<string, string> versions = 1;
    map<string, TimelineData> timelineData = 2;
    repeated GraphCategory graphCategories = 3;
  }

  message Version {
    string primary = 1;
    string api = 2;
    string mc = 3;
  }

  message ConfigurationFile {
    string filename = 1;
    string contents = 2;
  }

  message HardwareInfo {
    message CPU {
      string model = 1;
      uint32 coreCount = 2;
      uint32 threadCount = 3;
      uint64 frequency = 4;
    }

    CPU cpu = 1;

    message Memory {
      uint64 total = 1;
      uint64 swapTotal = 2;
      uint64 virtualMax = 3;
    }

    Memory memory = 2;
  }

  message VMOptions {
    string version = 1;
    string vendor = 2;
    string vm = 3;
    string runtimeName = 4;
    string runtimeVersion = 5;
    repeated string flags = 6;
  }

  message OperatingSystem {
    string manufacturer = 1;
    string family = 2;
    string version = 3;
    uint32 bitness = 4;
  }

  message TimelineData {
    string name = 1;
    string description = 2;
    string format = 3;
  }

  message GraphCategory {
    string name = 1;
    repeated string types = 2;
    bool default = 3;
  }
}

message AirplaneProfileFile {
  message ProfileInfo {
    uint64 samples = 1;
    int64 time_ms = 2;
  }

  ProfileInfo info = 1;

  message ProfileData {
    oneof ProfileType {
      TimeProfile timeProfile = 1;
      MemoryProfile memoryProfile = 2;
    }
  }

  ProfileData data = 2;

  uint64 startedAt = 4;
  uint64 stoppedAt = 5;

  // updated types
  message V2Data {
    MethodDictionarySlice dictionary = 1;

    repeated TimeProfileV2 timeProfile = 2;
    repeated MemoryProfileV2 memoryProfile = 3;
  }
  V2Data v2 = 6;
}

message TimeProfile {
  message Children {
    string name = 1;
    uint64 time = 2;
    string plugin = 3;
    uint32 samples = 4;
    repeated Children children = 5;
  }

  repeated Children children = 1;
}

message MemoryProfile {
  message Children {
    string name = 1;
    string plugin = 2;
    uint32 bytes = 3;
    repeated Children children = 4;
  }

  repeated Children children = 1;
}

message MethodDictionarySlice {
  enum MethodType {
    JAVA = 0;
    KERNEL = 1;
    NATIVE = 2;
  }

  message MethodDictionaryEntry {
    oneof MethodDictionaryType {
      JavaDictionaryEntry javaEntry = 1;
      OtherDictionaryEntry otherEntry = 2;
    }
  }

  message JavaDictionaryEntry {
    message JavaClass {
      uint32 packageIndex = 1;
      string name = 2;
    }

    message JavaTypeValue {
      oneof JavaType {
        JavaClass javaClassType = 1;
        string primitive = 2;
      }
      uint32 array = 3; // levels of array
    }

    JavaClass javaClass = 1;
    string method = 2;
    repeated JavaTypeValue params = 3;
    JavaTypeValue returnType = 4;
  }

  message OtherDictionaryEntry {
    string path = 1;
    MethodType type = 2;
  }

  repeated MethodDictionaryEntry entries = 1;
  repeated string packageEntries = 2;
}

message TimeProfileV2 {
  message Children {
    uint32 name = 1;
    uint64 time = 2;
    string plugin = 3;
    uint32 samples = 4;
    repeated Children children = 5;
  }

  string thread = 1;
  uint64 time = 2;
  uint32 samples = 3;
  repeated Children children = 4;
}

message MemoryProfileV2 {
  message Children {
    uint32 name = 1;
    string plugin = 2;
    uint32 bytes = 3;
    repeated Children children = 4;
  }

  string thread = 1;
  uint64 bytes = 2;
  repeated Children children = 4;
}

message TimelineFile {
  message EventData {
    string type = 1;
    uint64 time = 2;
    uint32 duration = 3;

    map<string, string> metadata = 4;
  }

  message LiveData {
    string type = 1;
    repeated double data = 2;

    map<string, string> metadata = 3;
  }

  uint64 startedAt = 1;
  uint64 stoppedAt = 2;

  repeated EventData events = 3;
  repeated LiveData live = 4;
}
